[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../../shared/models" }
conhub-utils = { path = "../../shared/utils" }
conhub-middleware = { path = "../../shared/middleware" }
conhub-config = { path = "../../shared/config" }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-web-httpauth = { workspace = true }
actix-session = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
log = { workspace = true }

# Database
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Authentication
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
base64 = { workspace = true }

# Validation
validator = { workspace = true }

# Redis for sessions
redis = { workspace = true }

# Email for password reset
lettre = { workspace = true }

# Configuration
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for OAuth
reqwest = { workspace = true }

# URL encoding
urlencoding = { workspace = true }
