[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../../shared/models" }
conhub-utils = { path = "../../shared/utils" }
conhub-middleware = { path = "../../shared/middleware" }
conhub-config = { path = "../../shared/config" }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-session = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
log = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
oauth2 = "4.4"
base64 = "0.21"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Redis for sessions
redis = { version = "0.24", features = ["tokio-comp"] }

# Email for password reset
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for OAuth
reqwest = { version = "0.11", features = ["json"] }

# URL encoding
urlencoding = "2.1"
