[package]
name = "billing-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "billing-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../../shared/models" }
conhub-utils = { path = "../../shared/utils" }
conhub-middleware = { path = "../../shared/middleware" }
conhub-config = { path = "../../shared/config" }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
log = { workspace = true }

# Database
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# Stripe payment processing
async-stripe = { workspace = true }

# Configuration
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
