[package]
name = "data-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../../shared/models" }
conhub-utils = { path = "../../shared/utils" }
conhub-middleware = { path = "../../shared/middleware" }
conhub-config = { path = "../../shared/config" }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
actix-files = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
log = { workspace = true }

# Database
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Vector database
qdrant-client = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Git operations
git2 = { workspace = true }

# URL parsing
url = { workspace = true }

# File operations
walkdir = { workspace = true }
tempfile = { workspace = true }
mime_guess = { workspace = true }
encoding_rs = { workspace = true }

# Configuration
dotenv = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
