[package]
name = "webhook-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webhook-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../shared/models" }
conhub-utils = { path = "../shared/utils" }
conhub-middleware = { path = "../shared/middleware" }
conhub-config = { path = "../shared/config" }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
log = "0.4"
env_logger = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Webhook verification
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
