[package]
name = "conhub-config"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_config"
path = "src/lib.rs"

[dependencies]
# Configuration
dotenv = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Concurrency and caching
parking_lot = "0.12"
lazy_static = "1.4"
