[package]
name = "conhub-middleware"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_middleware"
path = "src/mod.rs"

[dependencies]
# Web framework
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# JWT and auth
jsonwebtoken = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Database
sqlx = { workspace = true }

# Date/time
chrono = { workspace = true }
