[package]
name = "conhub-middleware"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_middleware"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-web-httpauth = "0.8"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# JWT and auth
jsonwebtoken = "9.2"

# Logging
tracing = "0.1"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
