[package]
name = "conhub-middleware"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_middleware"
path = "src/lib.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../models" }

# Web framework
actix-web = "4.4"
actix-web-httpauth = "0.8"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# JWT and auth
jsonwebtoken = "9.2"
rsa = "0.9"
base64 = "0.21"

# Logging
tracing = "0.1"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Redis for distributed rate limiting
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# Regex for CORS wildcard matching
regex = "1.10"

# Random number generation
rand = "0.8"
