[package]
name = "conhub-observability"
version = "0.1.0"
edition = "2021"
description = "Unified observability infrastructure for ConHub microservices"

[lib]
name = "conhub_observability"
path = "src/lib.rs"

[dependencies]
# Tracing ecosystem
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Web framework integration
actix-web = "4.4"

# Async
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Environment
once_cell = "1.18"
