[package]
name = "conhub-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_utils"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-appender = "0.2"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
sysinfo = "0.37.2"
