[package]
name = "conhub-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_utils"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
log = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }
qdrant-client = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }

# System info
sysinfo = "0.37.2"
