[package]
name = "conhub-utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_utils"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-appender = "0.2"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
lazy_static = "1.4"

# System info
sysinfo = "0.37.2"
