[package]
name = "dropbox-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
conhub-plugins = { path = "../../../shared/plugins" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }