[package]
name = "amazon-q-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
conhub-plugins = { path = "../../../shared/plugins" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]